--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+config.js
+
 # Logs
 logs
 *.log
@@ -70,7 +72,7 @@ typings/
 
 # dotenv environment variables file
 .env
-.env.test
+.env_example
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
